# sops-pre-commit

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .releaserc-pre-release.js  .releaserc.full.js  .releaserc.js  .releaserc.pre-release.js  .releaserc.release.js  .sops.yaml  CHANGELOG.md  EXAMPLE.sops.yaml  Makefile  README.md  package-lock.json  package.json  project.gitignore  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  setup.cfg  setup.py  version.py
.github/: yamllint.config.yaml
.github/workflows/: 01_feature_pre_prelease_pr.yaml  02_pre_release_release.yaml  03_release_main.yaml  README.md  auto-pr.yaml  autopr.yaml  full-release.yaml  pr_body_gen.py  pr_body_template.j2  pre-release.yaml  release.yaml  semantic-pre-release.sh  semantic-release.sh  semantic_release.md  tasks-node-release-pypi.yaml  tasks-node.yaml  tasks-pr-create-update.sh  tasks-python-test-pr.yaml  tasks-python.yaml  tasks-semantic-release.sh  tasks-setup-git.sh  tasks-setup-variables.sh
docs/: encryption-keys-not-found.md
hooks/: __init__.py  encrypt_decrypt_sops.py  forbid_secrets.py  requirements.txt
tests/: secret-fail.yaml  test_always_pass.py  test_encrypt_decrypt_sops.py
